fixed text align,ent

--- a/src/awesome-pools-landing-page/styles.css
+++ b/src/awesome-pools-landing-page/styles.css
@@ -212,6 +212,12 @@ section .pool-circle {
   justify-content: space-between;
 }
 
+#service-write-up p {
+  text-align: left;
+  padding: 0;
+  margin: 0;
+}
+
 .arrow-icon {
   width: 50px;
   height: 50px;
@@ -342,7 +348,7 @@ button.service {
   width: 150px;
   height: 40px;
   padding: 0;
-  margin-top: 4px 8px;
+  margin-top: 30px;
 }
 
 #personal-touch-write-up button:hover {
@@ -352,8 +358,10 @@ button.service {
 
 #personal-touch-write-up p.first-p {
   color: #f98315;
+  padding: 0;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  text-align: left;
 }
 
 #personal-touch-write-up h2 {
@@ -364,8 +372,8 @@ button.service {
 
 #personal-touch-write-up p.second-p {
   color: black;
-  margin-top: 30px;
   font-weight: 100;
+  text-align: left;
 }
 
 #why-us {
@@ -399,11 +407,13 @@ button.service {
   font-size: 30px;
   text-transform: uppercase;
   margin-bottom: 8px;
+  text-align: left;
 }
 
 #choose-us p {
   margin: 0;
   padding: 0;
+  text-align: left;
 }
 
 #numbers-pool {
@@ -439,7 +449,7 @@ button.service {
 #clients {
   width: 70%;
   position: relative;
-  bottom: 80px;
+  bottom: 50px;
 }
 
 #clients h1 {
@@ -452,6 +462,7 @@ button.service {
   margin: 0;
   padding: 0;
   color: #777777;
+  text-align: left;
 }
 
 #testimonials {
@@ -495,6 +506,7 @@ button.service {
 .text p {
   font-size: 25px;
   color: #777777;
+  text-align: left;
 }
 
 .profile {
@@ -660,7 +672,7 @@ li.grey-list {
 
 footer {
   width: 100%;
-  border: 1px solid black;
+  border: 1px solid #151515;
   height: 450px;
   background-color: #151515;
   margin: 0;
@@ -668,71 +680,60 @@ footer {
 }
 
 #footer {
-  /* border: 1px solid lightcoral; */
-  width: 75%;
-  height: 55%;
+  width: 70%;
+  height: 60%;
   margin: 0 auto;
-  margin-top: 95px;
+  margin-top: 80px;
   display: flex;
+  justify-content: center;
+}
+
+#copyrights {
+  display: flex;
+  color: #d7d2cb;
+  width: 300px;
+  justify-content: space-between;
+  margin-left: 270px;
 }
 
 #footer-gist,
 #footer-list,
 #sign-up {
-  flex-basis: 33.3%;
-  /* border: 1px solid blanchedalmond; */
+  width: 33%;
   height: 100%;
-}
-
-#copyrights {
-  /* border: 1px solid green; */
-  width: 250px;
-  height: 30px;
-  margin-left: 200px;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 5px;
-}
-
-#copyrights p {
-  color: #d7d2cb;
-  font-size: 12px;
-  text-align: center;
-  margin: 0 auto;
 }
 
 #footer-gist {
+  height: 70%;
+  padding-left: 50px;
+}
+
+#footer-logo {
   display: flex;
-  flex-direction: column;
 }
 
-#footer-logo,
-#footer-write-up,
-#social-media {
-  flex-basis: 33.3%;
-  /* border: 1px solid blue; */
-  height: 100%;
+#footer-logo h2 {
+  font-size: 18px;
 }
 
-#footer-write-up p {
+#footer-gist p {
+  text-align: left;
   color: #f7f7f7;
   font-size: 12px;
-  padding-bottom: 30px;
 }
 
-#footer-logo img {
-  width: 175px;
-  height: 35px;
+#social-media {
+  margin-top: 20px;
+  width: 100px;
+  display: flex;
+  justify-content: space-between;
 }
 
 #social-media img {
   width: 25px;
-  margin-right: 10px;
 }
-
-img.facebook {
-  height: 30px;
-  width: 15px;
+#social-media img:nth-of-type(3) {
+  width: 13px;
 }
 
 #footer-list {
@@ -740,83 +741,58 @@ img.facebook {
 }
 
 #footer-list ul {
-  /* border: 1px solid royalblue; */
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 80%;
   margin: 0 auto;
-  /* padding-right: 20px; */
+  height: 70%;
 }
 
 #footer-list li {
+  padding: 0;
+  margin: 0;
   list-style: none;
+}
+
+#footer-list a {
+  text-decoration: none;
   color: #f7f7f7;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-
-#footer-list li:hover {
-  color: #d3bcbc;
-}
-
-#sign-up {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin-left: 30px;
+  font-size: 15px;
 }
 
 #sign-up h2 {
   color: #f7f7f7;
-  margin: 0;
-  padding: 0;
   font-size: 20px;
+  margin: 0;
 }
 
-#sign-up input {
+input {
+  width: 80%;
   background-color: #151515;
-  border: 1px solid #91979f;
+  border: 1px solid #656565;
+  height: 25px;
   border-radius: 15px;
-  width: 100%;
-  height: 30px;
-  color: #ffffff;
-}
-
-#email {
-  line-height: 50px;
-  padding-left: 15px;
+  margin-top: 10px;
+  padding-left: 10px;
 }
 
 #sign-up button {
-  width: 120px;
-  height: 40px;
-  border-radius: 20px;
-  margin-top: 10px;
   background-color: #f98315;
+  width: 35%;
+  height: 35px;
+  border-radius: 15px;
+  margin-top: 10px;
   border: 1px solid #f98315;
-  color: #ffffff;
-}
-
-#sign-up button:hover {
-  background-color: #ffffff;
-  color: #f98315;
 }
 
 #sign-up p {
-  font-size: 9px;
   color: #91979f;
+  font-size: 12px;
+  padding: 0;
+  margin-top: 10px;
+  text-align: left;
 }
 
 #sign-up a {
+  text-decoration: underline;
   color: #91979f;
-}
-
-#first-ul {
-  padding: 0;
-}
-
-button:hover {
-  background-color: #f98315;
-  color: #ffffff;
 }
